# UCF-VIT

./: CLAUDE.md  README.md  pyproject.toml  test_quanto_quantization.py
Docker/: Dockerfile
apptainer/: frontier-ubuntu-gnu-rocm624-vit.def  frontier-ubuntu-gnu-rocm624.def
dev_scripts/: dh_utils.py  find_model_size.py  inference_pred_fsdp.py  inference_sap_simple.py  main_dh_centralized.py  train_diffusion_fsdp.py  train_diffusion_fsdp_dh.py  train_diffusion_fsdp_wFixedFID.py  train_diffusion_fsdp_wFixedFID_2D.py  train_diffusion_fsdp_wFixedFID_2D_singMod.py  train_diffusion_fsdp_withPlots.py  train_diffusion_fsdp_withPlots_2D.py  train_masked_fsdp.py  train_pred_fsdp.py  train_sap_simple.py
dev_scripts/Not_USED/: dh_utils.py  train_diffusion_fsdp_dh.py  train_diffusion_fsdp_main.py  train_diffusion_fsdp_wFID.py  train_diffusion_fsdp_withPlots_2D.py
launch/basic_ct/: diffusion_fsdp.sh  diffusion_simple.sh  inference_unetr_simple.sh  masked_fsdp.sh  masked_simple.sh  masked_simple_apptainer.sh  sap_simple.sh  unetr_simple.sh
launch/catsdogs/: classification_simple.sh  quanto_2bit_classification.sh  quanto_4bit_classification.sh  quanto_8bit_classification.sh  (+1 more)
training_scripts/: inference_unetr_simple.py  train_class_simple.py  train_class_simple_torchDataloader.py  train_diffusion_fsdp.py  train_diffusion_simple.py  train_masked_fsdp.py  train_masked_simple.py  train_pred_fsdp.py  train_sap_simple.py  train_unetr_simple.py
utils/: load_balance.py  plotting_generations.py  preprocess_load_balancing.py  preprocessing.py  visualize_adaptive.py
(+86 files in other folders)
