[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "UCF_VIT"
version = "0.0.1"
authors =[
    {name="Xiao Wang", email="wangx2@ornl.gov"},
    {name="Isaac Lyngaas", email="irlyngaas@ornl.gov"}
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
"monai>=1.4.0",
"nibabel>=5.3.2",
"torchdata==0.9.0",
"einops>=0.8.1",
"opencv-python-headless>=4.11.0.86",
"matplotlib>=3.10.1",
"scipy>=1.15.2",
"torch>=2.6.0",
"timm>=1.0.15",
"xformers>=0.0.30"
]

[project.urls]
"Homepage" = "https://github.com/irlyngaas/UCF-VIT"
"Bug Tracker" = "https://github.com/irlyngaas/UCF-VIT/issues"

